--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
 #index:
 #    path: /
-#    controller: App\Controller\DefaultController::index
+#    controller: App\Controller\AppEntityPersonController::index
+#person_index:
+#    path: /app/entity/person
+#    controller: App\Controller\AppEntityPersonController::index
