blog-1 -> arreglando rutas

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -15,4 +15,4 @@ person_edit:
 person_delete:
     path: /app/entity/person/{id}
     controller: App\Controller\AppEntityPersonController::delete
-    methods: POST
+    methods: DELETE|POST
