--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,18 +1,7 @@
+module_app:
+  resource: "../src/Resources/config/routing.yml"
+  prefix: /app
+
 index:
-    path: /
-    controller: App\Controller\AppEntityPersonController::index
-person_index:
-    path: /app/entity/person
-    controller: App\Controller\AppEntityPersonController::index
-person_new:
-    path: /app/entity/person/new
-    controller: App\Controller\AppEntityPersonController::new
-    methods: GET|POST
-person_edit:
-    path: /app/entity/person/{id}/edit
-    controller: App\Controller\AppEntityPersonController::edit
-    methods: PUT|GET|POST
-person_delete:
-    path: /app/entity/person/{id}
-    controller: App\Controller\AppEntityPersonController::delete
-    methods: DELETE|POST
+  path: /
+  controller: App\Controller\AppEntityPersonController::index
